feat(platform): v1.9.4 dev-loop sweep — DEV-106/107 closed, compilation regressions fixed, zero warn/error cluster-wide
- DEV-106: Add idempotent partner_code/status/webhook_url columns + unique index to V14 migration
- DEV-107: Remove explicit H2 dialect, add EnableDynamicAgentLoading to surefire, disable scheduling in test
- Fix gateway State import after package relocation (application.service → domain)
- Fix compliance test brace truncation during entity-to-domain rename
- Revert ArchUnit 1.4.2→1.2.1 in billing/statement/promotion (1.4.2 parses Java 25, exposes pre-existing violations — tracked as L-111)
- DEL: V99 seed migrations moved to db/seed/ directories (account, wallet)
- ADD: production migration resource tests (account, cms)
- ADD: outbox bootstrap job, dev-secrets patch, partner V14 migration, podman compose tests
- CHG: flyway-core→spring-boot-flyway, archunit→managed version, Jackson 3 compat notes
- CHG: OTEL_ENABLED defaults, application-container.yml alignment, next.config.ts cleanups
- DOCS: L-108–L-111 lessons, PROGRESS scorecard, TODOS closed, CHANGELOG v1.9.4 entries

Co-authored-by: CommandCodeBot <noreply@commandcode.ai>